2006-08-28  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline
	2006-06-23  Ben Elliston  <bje@au.ibm.com>
	* dfp.c (decimal_to_decnumber): Do not use decNumberNegate to
	negate dn -- manipulate it directly.

	Backport from mainline
	2006-03-08  Ben Elliston  <bje@au.ibm.com>
	* config/fp-bit.h (CMPtype): Typedef to a word mode integer.

	Backport from mainline
 	* config/dfp-bit.h (CMPtype): Typedef to a word mode integer.
	(LIBGCC2_WORDS_BIG_ENDIAN): Define.
 
	Backport from mainline
	* gcc/config/t-dfprules: Fix a comment.

	Backport from mainline
	2006-03-06  Ben Elliston  <bje@au.ibm.com>
	* config.gcc: Add t-dfprules to $tmake_file for i*86-*-linux* and
	x86_64-*-linux* configurations.

	Backport from mainline
	2006-03-06  Ben Elliston  <bje@au.ibm.com>
	* config/dfp-bit.h (CMPtype): Typedef to a word mode integer.

	Backport from mainline
	2006-03-02  Ben Elliston  <bje@au.ibm.com>
	* mklibgcc.in: Depend on config/dfp-bit.h in rules that compile
	config/dfp-bit.c.

	Backport from mainline
	2006-03-01  Ben Elliston  <bje@au.ibm.com>
	* config.gcc: Add t-dfprules to $tmake_file for powerpc-*-linux*
	and powerpc64-*-linux* configurations.
	* config/t-dfprules: New file.

	Backport from mainline
	2006-03-01  Ben Elliston  <bje@au.ibm.com>
	* mklibgcc.in: Add logic to handle $DFP_ENABLE and $DFP_CFLAGS.
	Compile dfp-bit.c from the source directory using -DWIDTH and
	$DFP_CFLAGS to control the compilation of that file, rather than
	generating width-specific versions in the build directory.
	* Makefile.in (libgcc.mk): Pass down DFP_ENABLE and DFP_CFLAGS.
	(LIBGCC_DEPS): Replace $(D32PBIT) et al with config/dfp-bit.[hc].

	Backport from mainline
	2006-02-07  Ben Elliston  <bje@au.ibm.com>
	* config/i386/i386.c (ix86_scalar_mode_supported_p): New.
	(TARGET_SCALAR_MODE_SUPPORTED_P): Define hook.
	(classify_argument): Handle SDmode, DDmode, TDmode for 64-bit.
	(ix86_return_in_memory): Handle TDmode.
	(ix86_libcall_value): Handle SDmode, DDmode, TDmode.